sort paper update; all 4 sumitted

--- a/plugins/vdm2isa/pub/sorting/order.bib
+++ b/plugins/vdm2isa/pub/sorting/order.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Leo Freitas at 2022-12-29 10:47:33 +0000 
+%% Created for Leo Freitas at 2023-01-11 16:01:19 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{10.5555/3204179.3204224,
+	abstract = {When a system specified using the Vienna Development Method (VDM) is realised using code-generation, no guarantees are currently made about the correctness of the generated code. In this paper, we improve code-generation of VDM models by taking contract-based elements such as invariants and pre- and postconditions into account during the code-generation process. The contract-based elements of the Vienna Development Method Specification Language (VDM-SL) are translated into corresponding constructs in the Java Modelling Language (JML) and used to validate the generated code against the properties of the VDM model. VDM-SL and JML are both Design-by-Contract (DbC) languages, with the difference that VDM-SL supports abstract modelling and system specification, while JML is used for detailed specification of Java classes and interfaces. We describe the semantic differences between the contract-based elements of VDM-SL and JML and formulate the translation as a set of rules. We further demonstrate how dynamic JML assertion checks can be used to ensure the consistency of VDM's subtypes when a model is code-generated. The translator is fully automated and produces JML-annotated Java programs that can be checked for correctness using JML tools.},
+	address = {Berlin, Heidelberg},
+	author = {Tran-J\O{}rgensen, Peter W. and Larsen, Peter Gorm and Leavens, Gary T.},
+	date-added = {2023-01-11 16:01:11 +0000},
+	date-modified = {2023-01-11 16:01:11 +0000},
+	issn = {1433-2779},
+	issue_date = {April 2018},
+	journal = {Int. J. Softw. Tools Technol. Transf.},
+	keywords = {Code-generation, Formal methods, Design-by-Contract, Java, JML, VDM},
+	month = {apr},
+	number = {2},
+	numpages = {25},
+	pages = {211--235},
+	publisher = {Springer-Verlag},
+	title = {Automated Translation of VDM to JML-Annotated Java},
+	volume = {20},
+	year = {2018}}
 
 @inproceedings{emv2,
 	author = {Leo Freitas},
